Fixed sidebar items to be left align in desktop view

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -118,6 +118,11 @@ aside ul {
         width: 20%;
         height: 100%;
     }
+    .center.left {
+        text-align: left;
+        margin-left: 10%;
+    }
+
     section {
         padding: 0px 20px 0px;
     }
